[package]
name = "lock_free_logging"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bench]]
name = "custom_bench"
harness = false

[dependencies]
chrono = "0.4.31"
core_affinity = "0.8.1"
eyre = "0.6.12"
futures = { version = "0.3.30", features = ["executor"] }
lockfree = "0.5.1"
prelude = "0.2.1"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
